[package]
name = "slam"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
env_logger = "0.11.6"
eyre = "0.6.12"
glob = "0.3.1"
log = { version = "0.4.22", features = ["serde", "std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
similar = "2.6.0"
