[package]
name = "slam"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.6"
eyre = "0.6.12"
glob = "0.3.1"
itertools = "0.14.0"
log = { version = "0.4.22", features = ["serde", "std"] }
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
similar = "2.6.0"
